# ignition-agent-tools

./: .gitignore  README.md  build.gradle.kts  settings.gradle
common/: build.gradle.kts
common/src/main/java/com/codex/ignition/agenttools/common/: AgentToolsModule.java  ApiError.java  ApiResponse.java  BrowseRequest.java  DeleteRequest.java  ErrorCode.java  ReadRequest.java  TagKind.java  TagSpec.java  TagWrite.java  UpsertRequest.java  ValueSourceType.java  WriteRequest.java
common/src/test/java/com/codex/ignition/agenttools/common/: TagKindTest.java  ValueSourceTypeTest.java
docs/: api.md
gateway/: build.gradle.kts
gateway/src/main/java/com/codex/ignition/agenttools/gateway/: AgentToolsConfig.java  AgentToolsGatewayHook.java  AgentToolsRoutes.java  AuditLogger.java  GatewayTagService.java  JsonSupport.java  TagOperationException.java  TagPathUtils.java
gateway/src/test/java/com/codex/ignition/agenttools/gateway/: AgentToolsConfigTest.java  TagPathUtilsTest.java
python-client/: pyproject.toml
python-client/ignition_agent_tools/: __init__.py  cli.py  client.py
