[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ignition-agent-tools-client"
version = "0.1.0"
description = "Python client for the Ignition Agent Tools gateway module"
requires-python = ">=3.10"

[project.scripts]
ignition-agent-tools = "ignition_agent_tools.cli:main"
